syntax = "proto3";
package votesystem.voting;

option go_package = "votesystem/x/voting/types";

message VoteRecord {
  uint64 id = 1;
  string voterAddress = 2; 
  string candidateID = 3; 
  string electionID = 4; 
  
}
